# layoutenv

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  grader.py  graders.py  gradio_app.py  guidelines.txt  inference.py  models.py  openenv.yaml  prompts.py  pyproject.toml  tasks.py
dataset/: dataset.py  dataset_stats.py  find_task_samples.py  genposter_5000_images_stats.npy  task_samples.json
dataset/sample_saliency_images/: 117_bg.npy  3960_bg.npy  723_bg.npy
server/: __init__.py  app.py  layout_environment.py  metrics.py  requirements.txt
