[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-layoutenv"
version = "0.1.0"
description = "Layout refinement RL environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.1",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "layoutenv.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["layoutenv", "layoutenv.server"]
package-dir = { "layoutenv" = ".", "layoutenv.server" = "server" }
